syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateKubernetesNodePoolRequest {
  KubernetesNodePoolArgs resource = 1;
}

message ReadKubernetesNodePoolRequest {
  string resource_id = 1;
}

message UpdateKubernetesNodePoolRequest {
  string resource_id = 1;
  KubernetesNodePoolArgs resource = 2;
}

message DeleteKubernetesNodePoolRequest {
  string resource_id = 1;
}

message KubernetesNodePoolArgs {
  common.ChildResourceCommonArgs common_parameters = 1;
  string name = 2;
  string subnet_id = 3;
  string cluster_id = 4;
  int32 starting_node_count = 5;
  int32 min_node_count = 6;
  int32 max_node_count = 7;
  common.VmSize.Enum vm_size = 8;
  int64 disk_size_gb = 9;

  map<string, string> labels = 10;

}

message KubernetesNodePoolResource {
  common.CommonChildResourceParameters common_parameters = 1;
  string name = 2;
  string subnet_id = 3;
  string cluster_id = 4;
  int32 starting_node_count = 5;
  int32 min_node_count = 6;
  int32 max_node_count = 7;
  common.VmSize.Enum vm_size = 8;
  int64 disk_size_gb = 9;

  map<string, string> labels = 10;
}
